--- a/application.properties
+++ b/application.properties
@@ -13,7 +13,7 @@ spring.jpa.show-sql = true
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 #mariadb
 spring.datasource.url=jdbc:mariadb://localhost:3366/church
